crates/xlate/tests/snapshots/golden_matrix__responses__output_strict_unsupported_keywords__gpt-4o-mini__20260910__responses_to_chat__gpt5_chat.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Give a 3-letter code."
    }
  ],
  "response_format": {
    "type": "json_schema",
    "json_schema": {
      "name": "code",
      "schema": {
        "additionalProperties": false,
        "properties": {
          "code": {
            "type": "string"
          }
        },
        "required": [
          "code"
        ],
        "type": "object"
      },
      "strict": true
    }
  },
  "max_completion_tokens": 128
}
--- headers ---
upstream_streams: false
--- degraded ---
output.schema=rewritten
